Can now store information in sqlite database from diary components. TODO: look into "how are you"-component to store data and categorize mood etc.

--- a/app/app.css
+++ b/app/app.css
@@ -61,7 +61,7 @@ components that have the btn class name.
   text-align: center;
   width: 200px;
 }
-/*Test*/
+/*Todo-list*/
 .list-view-item {
   height: 48;
   font-size: 16;
