--- a/platforms/ios/msHelse/app/app.css
+++ b/platforms/ios/msHelse/app/app.css
@@ -61,7 +61,7 @@ components that have the btn class name.
   text-align: center;
   width: 200px;
 }
-/*Test*/
+/*Todo-list*/
 .list-view-item {
   height: 48;
   font-size: 16;
