--- a/platforms/ios/msHelse/app/views/diary/pinch/pinch.css
+++ b/platforms/ios/msHelse/app/views/diary/pinch/pinch.css
@@ -1,6 +1,10 @@
 #overText{
   text-align: center;
-  margin-top: 20%;
+  color: white;
+  margin-top: 35%;
+}
+#overText .title{
+  font-size: 35pt;
 }
 
 .nxtBtn{
