--- a/platforms/ios/msHelse/app/app.css
+++ b/platforms/ios/msHelse/app/app.css
@@ -19,11 +19,6 @@ components that have the btn class name.
 .btn {
     font-size: 18;
 }
-.tile {
-    background-color: #CCCCCC;
-    margin: 5;
-    text-align: center;
-}
 .content{
   margin: 20px;
   text-align: center;
@@ -36,8 +31,18 @@ components that have the btn class name.
   margin-top: 30px;
 }
 .title{
-  font-size: 20;
+  font-size: 20pt;
   font-weight: bold;
+}
+/*Title in each component*/
+.titleMain{
+  font-size: 50pt;
+}
+/*Image in each component*/
+.mainComp{
+  width: 400px;
+  height: 400px;
+  margin-top: 30px;
 }
 .listLayout{
   margin: 20px;
@@ -49,11 +54,11 @@ components that have the btn class name.
 /*Start and end button in diary component*/
 .startEndBtn{
   margin-top: 20%;
-  width: 400px;
+  width: 500px;
+  height: 100px;
   border-radius: 15px;
   background-color: green;
   color: white;
-  font-weight: bold;
   font-size: 20pt;
 }
 /*App icon*/
@@ -78,15 +83,19 @@ components that have the btn class name.
   color: white;
   margin-bottom: 10px;
 }
-.trainingStack{
-  height: 300px;
-  width: 100%;
+.navButton{
+  height: 140px;
+  width: 90%;
   text-align: center;
   color: white;
   font-weight: bold;
   margin-top: 20px;
-  background-color:#42f49b;
+  background-color:#78DD8C;
+  border-radius: 15px;
 }
-.trainingStack Label{
+.navButton Label{
   margin-top: 40%;
+}
+.diaryComp{
+  text-align: center;
 }
