--- a/platforms/ios/msHelse/app/views/diary/text/text.css
+++ b/platforms/ios/msHelse/app/views/diary/text/text.css
@@ -1,6 +1,26 @@
-#subject{
+.question{
+  background-color: #6CE3FF;
+  color: white;
+  font-weight: bold;
+  width: 580px;
+  height: 100px;
+  border-radius: 0px 30px 30px 30px;
+  padding: 30px;
+  font-size: 18pt;
+}
+
+.response{
+  padding: 30px;
+  border-radius: 30px 30px 0px 30px;
   margin-top: 20px;
-  background-color: #dbf5f9;
-  height: 300px;
-  width: 100%;
+  background-color: #80CEBF;
+  width: 580px;
+  height: auto;
+}
+
+#subject{
+  color: white;
+  font-size: 16pt;
+  background-color: #80CEBF;
+  height: 200px;
 }
