--- a/platforms/ios/msHelse/app/views/home-page/home-page.css
+++ b/platforms/ios/msHelse/app/views/home-page/home-page.css
@@ -16,7 +16,7 @@ Page{
   height: 210px;
   background-color: #2AC0FF;
   border-radius: 15px;
-  margin-top: -150px;
+  margin-top: -100px;
   color: white;
 }
 .smallBox Label{
@@ -34,6 +34,9 @@ Page{
   background-color: #2AC0FF;
 }
 #visual{
-  height: 400px;
+  height: 450px;
   background-color: #82DBDE;
+}
+.graphBox{
+  width: 95%;
 }
