--- a/app/views/textview/textview.css
+++ b/app/views/textview/textview.css
@@ -1,10 +1,13 @@
-.response{
-  margin-top: 20px;
+.question{
+  margin: 20px;
 }
-.textDay{
+.response{
+  margin: 20px;
+  min-height: 200px;
+}
+.timeDay{
+  font-size: 12pt;
   text-align: center;
-  height: 100px;
-  margin: 15px;
-  border-radius: 15px;
-  background-color: #91F0F4;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
