--- a/app/views/diary/mood/mood.css
+++ b/app/views/diary/mood/mood.css
@@ -4,12 +4,15 @@
 }
 .btnRegister{
   width: 100%;
-  height: 300px;
+  height: 315px;
 }
-.btnRegister Label{
+.btnRegister{
   color: white;
-  font-size: 30pt;
+  font-size: 35pt;
 }
 .diaryComp{
-  margin-top: 100px;
+  margin-top: 40px;
+}
+.marginMood{
+  margin-bottom: 80px;
 }
