--- a/app/views/visualisationmain/consultation/consultation.css
+++ b/app/views/visualisationmain/consultation/consultation.css
@@ -1,11 +1,11 @@
 .graphContainer{
-  background-color: #82DBDE;
+  background-color: #EBA0A0;
   border-radius: 15px;
   margin-top: 20px;
   padding: 10px;
 }
 .graphBox{
-  background-color: #82DBDE;
+  background-color: #EBA0A0
 }
 .h2{
   margin-top: 40px;
