--- a/platforms/ios/msHelse/app/views/visualisation/visualisation.css
+++ b/platforms/ios/msHelse/app/views/visualisation/visualisation.css
@@ -1,5 +1,15 @@
+.graphContainer{
+  background-color: #82DBDE;
+  border-radius: 15px;
+  margin-top: 20px;
+  padding: 10px;
+}
+.graphBox{
+  background-color: #82DBDE;
+}
 .h2{
   margin-top: 40px;
+  padding-left: 20px;
 }
 .body{
   margin-bottom: 10px;
