Fixed the visualisation for the mood graph, now the symptom-graph needs to be fixed.

--- a/app/views/visualisationmain/consultation/consultation.css
+++ b/app/views/visualisationmain/consultation/consultation.css
@@ -5,7 +5,8 @@
   padding: 10px;
 }
 .graphBox{
-  background-color: #EBA0A0
+  background-color: #EBA0A0;
+  height: 250px;
 }
 .h2{
   margin-top: 40px;
