--- a/platforms/ios/msHelse/app/app.css
+++ b/platforms/ios/msHelse/app/app.css
@@ -138,3 +138,11 @@ components that have the btn class name.
   font-size: 18pt;
   padding: 20px;
 }
+.segment{
+  width: 70%;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  background-color: white;
+  color: black;
+  border-radius: 15px;
+}
