Small fix to solve the crash while loading the graphs in the cosultation module.

--- a/app/app.css
+++ b/app/app.css
@@ -132,6 +132,7 @@ components that have the btn class name.
   font-size: 14pt;
   font-weight: bold;
   text-align: center;
+  margin: 20px;
 }
 .textExpl{
   color: white;
