Final commit for the master thesis. Implemented a dialog module for error prevention and better navigation, refactored all files, removed the ability to swipe with a gesture to navigate back to the main page due to a bug-fix, added instructions to the breathing exercise and added specific questions in the symptom registration module to expand.

--- a/app/views/diary/mood/mood.css
+++ b/app/views/diary/mood/mood.css
@@ -7,12 +7,19 @@
   height: 315px;
 }
 .btnRegister{
-  color: white;
-  font-size: 35pt;
+  color: black;
+  font-size: 25pt;
+}
+.btnRegister Image{
+  margin-right: 20px;
 }
 .diaryComp{
-  margin-top: 40px;
+  margin-top: 0px;
 }
 .marginMood{
   margin-bottom: 50px;
+}
+.titleMain{
+  font-size: 30pt;
+  padding: 5px;
 }
