--- a/app/views/diary/symptoms/symptoms.css
+++ b/app/views/diary/symptoms/symptoms.css
@@ -4,29 +4,53 @@ GridLayout button{
   background-color: gray;
   margin: 20px;
 }
+.titleMain{
+  font-size: 35pt;
+  padding: 5px;
+}
 .symptomCont{
   background-color: #82DBDE;
   border-radius: 15px;
-  height: 140px;
+  min-height: 140px;
   width: 90%;
   margin-top: 30px,
 }
-.symptomCont Label{
-  color: white;
-  text-align: left;
-  font-weight: bold;
-  font-size: 17pt;
-  margin-top: 15px;
-  margin-left: 20px;
+.symtomDetails{
+  padding: 20px;
+}
+.symtomDetails GridLayout{
+  margin-bottom: 5px;
 }
 .eventBtn{
   height: 50px;
+  width: 200px;
   background-color: white;
   border-radius: 15px;
   color: black;
+}
+.symptomHead{
+  margin-top: 30px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  font-size: 25pt;
+}
+.specQuestion{
+  font-size: 18pt;
+  font-weight: bold;
+  color: white;
+  text-align: left;
+  margin: 15px;
+
 }
 #inputSelf{
   color: white;
   margin-top:10%;
   margin-bottom:15%;
+}
+#uiFix{
+  padding-bottom: 20px;
+}
+#firstElement{
+  margin-top: 50px;
 }
