--- a/app/app.css
+++ b/app/app.css
@@ -6,7 +6,6 @@ selectors and properties you can use to style UI components. */
 
 @import '~/nativescript-theme-core/css/sky.css';
 
-
 .btn {
     font-size: 18;
 }
@@ -27,7 +26,7 @@ selectors and properties you can use to style UI components. */
 }
 /*Title in each component*/
 .titleMain{
-  font-size: 40pt;
+  font-size: 35pt;
   margin-top: 20px;
 }
 /*Image in each component*/
@@ -47,16 +46,16 @@ selectors and properties you can use to style UI components. */
   font-size: 15pt;
   text-align: center;
   color: rgb(0, 0, 0);
-  background-color: rgb(236, 234, 234);
   padding: 16px;
 }
 .listItems{
-  width: 90%;
+  width: 100%;
+  font-weight: bold;
 }
 
 .listItemsDone{
-  width: 100%;
   text-decoration: line-through;
+  font-weight: normal;
 }
 
 .activeButton{
@@ -91,8 +90,7 @@ selectors and properties you can use to style UI components. */
 }
 /*App icon*/
 .iconTitle{
-  text-align: center;
-  width: 200px;
+  width: 150px;
 }
 
 .graph{
