--- a/app/views/visualisationmain/visualisation/visualisation.css
+++ b/app/views/visualisationmain/visualisation/visualisation.css
@@ -1,3 +1,9 @@
+SegmentedBar{
+  color: #1280A0;
+  background-color: transparent;
+  selected-background-color: #1280A0;
+  selected-color: white;
+}
 .graphContainer{
   background-color: #82DBDE;
   border-radius: 15px;
@@ -6,7 +12,7 @@
 }
 .graphBox{
   background-color: #82DBDE;
-  height: 300px;
+  height: 310px;
 }
 .h2{
   margin-top: 40px;
@@ -14,4 +20,7 @@
 }
 .body{
   margin-bottom: 10px;
+}
+#symptomTextVisual {
+  margin-bottom: 20px;
 }
