--- a/platforms/ios/msHelse/app/views/textview/textview.css
+++ b/platforms/ios/msHelse/app/views/textview/textview.css
@@ -1,9 +1,12 @@
-.question{
-  margin: 20px;
-}
 .response{
+  padding: 30px;
+  border-radius: 30px 30px 0px 30px;
   margin: 20px;
   min-height: 200px;
+  background-color: #80CEBF;
+  width: 95%;
+  height: auto;
+  margin-bottom: 40px;
 }
 .timeDay{
   font-size: 12pt;
