--- a/app/app.css
+++ b/app/app.css
@@ -39,7 +39,7 @@ selectors and properties you can use to style UI components. */
 .listLayout{
   margin: 20px;
 }
-/*Todo-list*/
+
 .list-view-item {
   height: 100px;
   width: 100%;
@@ -54,6 +54,7 @@ selectors and properties you can use to style UI components. */
 }
 
 .listItemsDone{
+  width: 100%;
   text-decoration: line-through;
   font-weight: normal;
 }
@@ -61,12 +62,6 @@ selectors and properties you can use to style UI components. */
 .activeButton{
   background-color: rgb(29, 150, 103);
   color: white;
-}
-
-/*Remove item from list*/
-#remove{
-  text-align: right;
-  font-size: 16pt;
 }
 
 .textBox{
